# StudioDisplayBrightnessController

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: windows-x64.yml
scripts/: brightness-slider-interactions.cjs  sync-release-version.cjs  sync-release-version.test.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/studio_display/: brightness.rs  device.rs  error.rs  mod.rs  protocol.rs
src/components/: BrightnessSlider.tsx  DeviceStatus.tsx  PresetButtons.tsx
src/lib/: brightness.ts  tauri.ts
