[package]
name = "studio-display-brightness-controller"
version = "0.1.0"
description = "Apple Studio Display brightness controller for Windows."
authors = ["Eric Yang"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "studio_display_brightness_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
hidapi = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
